@@ -7,6 +7,8 @@ python3-support: fixed some syntax errors in several modules.
 
 python3-support: fixed the use of the logger console by the logging module.
 
+python3-support: new syntax used in a couple of methods in vtapp.py.
+
 ** September 11, 2013 **
 Local branch python3-support has been added.
 
